# jobdesk

./: .gitattributes  .gitignore  AGENT_SETUP.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  MIGRATION.md  README.md  README.zh.md  SECURITY.md  conftest.py  mypy.ini  pyproject.toml
.cursor/rules/: no-subagent.mdc  shell-permissions.mdc  wsl-g16-safety.mdc
.github/workflows/: ci.yml  optional-coverage.yml  package-smoke.yml
confflow/: main.py
confflow/calc/: analysis.py  resources.py
confflow/config/: __init__.py
confflow/core/: __init__.py  models.py  parsers.py  utils.py
confflow/workflow/: engine.py  step_handlers.py  validation.py
docs/: 814n-connectivity-and-latency.md  CONFFLOW_1_3_0_WHEEL_DEPLOYMENT.md  CONFFLOW_1_4_0_WHEEL_DEPLOYMENT.md  CONFFLOW_1_4_1_WHEEL_DEPLOYMENT.md  CONFFLOW_1_4_2_WHEEL_DEPLOYMENT.md  CONFFLOW_REAL_RUN_NOTES.md  CONFFLOW_WSL_SINGLE_RUN.md  CONFIG_REFERENCE.md  EXAMPLES.md  JOBDESK_DECISIONS.md  JOBDESK_FUTURE_DEVELOPMENT_PLAN.md  JOBDESK_PLAN.md  M8_ACCEPTANCE_REPORT.md  M8_MAX_PARALLEL_LOG.txt  M8_REAL_BACKEND_LOG.txt  PHASE10_NODEGRAPH_DAG_PLAN.md  PHASE7_WIZARD_UX.md  PHASE8_WIZARD_AND_G16.md  PHASE9B_XYZ_BATCH.md  PHASE9C_WIZARD_VALIDATION.md  PHASE9D_PLAN_RESULTS.md  PHASE9E_RECENT_PERSIST.md  PHASE9G_REAL_G16_SMOKE.md  PHASE9H1_TS_SMOKE.md  PHASE9H2_CHK_FROM_STEP_SMOKE.md  PHASE9H3_ORCA_MOCK_CLEANUP.md  PHASE9H4_SMOKE_TO_INTEGRATION.md  PHASE9_GAUSSIAN_SMOKE.md  REAL_INTEGRATION_TESTS.md  REFACTOR_PLAN.md  REFACTOR_PLAN_V2.md  REFACTOR_PLAN_V3.md  STYLE_CONTRACT.md  TROUBLESHOOTING.md  USAGE.md  USER_GUIDE.md  V1_RC_CHECKLIST.md  V1_RC_REPORT.md  WINDOWS_E2E_CHECKLIST.md  WSL_WORKFLOW_SMOKE.md  (+2 more)
examples/: README.md
examples/analysis_regex/: project.yaml
examples/directory_mode/: project.yaml
packaging/: README.md
scripts/: _phase6_harness_inner.sh  build_confflow_wheel.bat  check_public_tree.ps1  install-mock-g16-wsl.sh  install_mock_g16_wsl.py  install_mock_l1_wsl.py  jobdesk_gui.ps1  phase6_inner.sh  restore_g16_wsl.py  smoke_confflow_dag_round_trip.py  smoke_confflow_real_g16_chk_wsl.py  smoke_confflow_real_g16_ts_wsl.py  smoke_confflow_real_g16_wsl.py  smoke_confflow_wsl.py  smoke_gui_offscreen.py  smoke_workflow_spec.py  verify_confflow_wheel.bat  verify_confflow_wheel.ps1
src/jobdesk_app/confflow/: .gitignore  CHANGELOG.md  README.md  confflow.yaml  mypy.ini  pyproject.toml
src/jobdesk_app/confflow/.github/: PULL_REQUEST_TEMPLATE.md
src/jobdesk_app/confflow/.github/workflows/: ci.yml  coverage_push.yml
src/jobdesk_app/confflow/confflow/: __init__.py  cli.py  confts.py
src/jobdesk_app/confflow/confflow/blocks/confgen/: collision.py  generator.py  mapping.py  rotations.py  validator.py
src/jobdesk_app/confflow/confflow/blocks/refine/: __init__.py  processor.py  rmsd_engine.py
src/jobdesk_app/confflow/confflow/blocks/viz/: report.py
src/jobdesk_app/confflow/confflow/calc/: __init__.py  constants.py  geometry.py  manager.py  rescue.py  retry_runner.py  scan_ops.py  setup.py  task_execution.py
src/jobdesk_app/confflow/confflow/calc/async_exec/: __init__.py
src/jobdesk_app/confflow/confflow/calc/components/: __init__.py  executor.py  parser.py  task_runner.py
src/jobdesk_app/confflow/confflow/calc/db/: __init__.py  database.py
src/jobdesk_app/confflow/confflow/calc/policies/: __init__.py  base.py  gaussian.py  orca.py
src/jobdesk_app/confflow/confflow/config/: defaults.py  loader.py  schema.py
src/jobdesk_app/confflow/confflow/core/: console.py  constants.py  contracts.py  exceptions.py  io.py  logging.py  models.py  types.py  utils.py  validation.py
src/jobdesk_app/confflow/confflow/docs/: DAG-EXECUTION.md  PHASE3_PLAN.md
src/jobdesk_app/confflow/confflow/workflow/: __init__.py  config_builder.py  dag.py  engine.py  helpers.py  presenter.py  runtime_context.py  stats.py  step_handlers.py  validation.py
src/jobdesk_app/confflow/confflow/workflow/dag/: __init__.py  _legacy.py
src/jobdesk_app/confflow/docs/: ARCHITECTURE.md  COMMAND_REFERENCE.md  DEVELOPMENT.md  KEYWORD_REFERENCE.md  TESTING.md
src/jobdesk_app/confflow/scripts/: clean_artifacts.sh  run_coverage_push.sh
src/jobdesk_app/confflow/tests/: _helpers.py  conftest.py  fake_orca.sh  pentane.txt  pentane.xyz  pentane_real.yaml  real-s-ml-dla-ts1-sp.out  search.xyz  test_async_exec.py  test_calc_full.py  test_calc_manager_paths.py  test_cli.py  test_confgen.py  test_confgen_refine_fallbacks.py  test_confgen_validator.py  test_confts_cli.py  test_confts_keyword.py  test_console.py  test_contracts.py  test_core.py  test_dag.py  test_dag_engine.py  test_data.py  test_engine.py  test_geometry.py  test_input_snapshot.py  test_io.py  test_keyword_rewrite.py  test_loader.py  test_models.py  test_policies.py  test_refine.py  test_rescue.py  test_rescue_ts_scan_paths.py  test_retry_runner.py  test_runtime_context.py  test_schema.py  test_step_handlers.py  test_utils_manager.py  test_validation.py  (+1 more)
src/jobdesk_app/confflow/tests/data/: wf_dag.yaml
src/jobdesk_app/confflow/tests/input/: sial3-r-ml-lla-ts2.gjf  sial4-r-ml-lla-ts2.gjf
tests/: MOCK_STRATEGY.md  README.md  __init__.py  confflow.yaml  conftest.py  repository_helpers.py  test.txt  test_analyzer.py  test_app_config.py  test_app_paths_logging.py  test_architecture_boundaries.py  test_atomic_write.py  test_batch.py  test_batch_lifecycle.py  test_batch_service.py  test_button_feedback.py  test_calc.py  test_calc_full.py  test_chain_consistency.yaml  test_cli.py  test_comparison.py  test_confflow_preflight.py  test_confflow_real_g16_chk_smoke.py  test_confflow_real_g16_smoke.py  test_confflow_real_g16_ts_smoke.py  test_confflow_results.py  test_confflow_upload_preflight.py  test_confflow_validation_differential.py  test_confflow_wizard_calc_validation.py  test_confflow_wizard_dialog.py  test_confflow_wizard_i18n.py  test_confflow_wizard_recent_presets.py  test_confflow_wizard_workflow_validation.py  test_confflow_wizard_xyz_batch.py  test_confflow_wizard_xyz_drop.py  test_config_loader.py  test_conftest_basetemp.py  test_console.py  test_defaults.py  test_dryrun.py  (+92 more)
(+382 files in other folders)
