[project]
name = "jobdesk"
version = "0.5.0"
description = "Windows-first scientific-computing job desk for local inputs, remote execution, result download, and local analysis"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = [
    "pydantic>=2.0,<3.0",
    "pyyaml>=6.0",
    "paramiko>=3.0,<4.0",
    "pyside6>=6.5",
]

[project.scripts]
jobdesk = "jobdesk_app.cli:main"
jobdesk-prep = "jobdesk_app.cli_prep:main"

[project.gui-scripts]
jobdesk-gui = "jobdesk_app.gui.app:main"

[project.optional-dependencies]
chem = [
    "rdkit>=2023.9",
    # ConfFlow workflow engine. Not on PyPI (the package named ``confflow`` there
    # is an unrelated YAML-config library); install from the archived git tag so
    # both Windows GUI and Linux compute side import the same Pydantic models
    # (confflow.core.models.GlobalConfigModel / CalcConfigModel) for workflow
    # validation. See README § ConfFlow integration.
    "confflow @ git+https://github.com/moxuezhuchen/ConfFlow@v1.1.0-archived@1.0.10",
]
package = [
    "pyinstaller>=6.0",
]
dev = [
    "build>=1.2",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "ruff>=0.4",
    "types-PyYAML>=6.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
jobdesk_app = ["gui/resources/*.svg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
tmp_path_retention_policy = "none"
addopts = "-m 'not integration'"
markers = [
    "integration: opt-in tests that require real SSH/SFTP/ConfFlow endpoints",
]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["jobdesk_app"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false

# Type-check the bodies of untyped functions in the non-GUI layers.
[[tool.mypy.overrides]]
module = ["jobdesk_app.core.*", "jobdesk_app.remote.*", "jobdesk_app.services.*"]
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "jobdesk_app.services.run_repository",
    "jobdesk_app.services.run_coordinator",
    "jobdesk_app.services.run_monitor",
    "jobdesk_app.gui.run_monitor_qt",
]
check_untyped_defs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "jobdesk_app.gui.worker_utils",
    "jobdesk_app.gui.pages.settings_servers_helpers",
    "jobdesk_app.gui.pages.file_transfer_helpers",
]
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "PySide6.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "paramiko.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "rdkit.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "confflow.*"
ignore_missing_imports = true

# Parsers: re.search() -> Match|None pattern is safe but verbose to annotate.
[[tool.mypy.overrides]]
module = ["jobdesk_app.core.parsers.gaussian", "jobdesk_app.core.parsers.orca"]
disable_error_code = "assignment"

# comparison uses PySide6 enum attributes that stubs don't expose.
[[tool.mypy.overrides]]
module = "jobdesk_app.services.comparison"
disable_error_code = ["attr-defined", "operator", "type-var"]

# GUI modules use PySide6 enum attributes (e.g. Qt.AlignLeft, QHeaderView.Interactive)
# that type stubs expose under nested enum classes; suppress attr-defined only.
[[tool.mypy.overrides]]
module = "jobdesk_app.gui.*"
disable_error_code = "attr-defined"
