[project]
name = "jobdesk"
version = "0.5.0"
description = "Windows-first scientific-computing job desk for local inputs, remote execution, result download, and local analysis"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = [
    "pydantic>=2.0,<3.0",
    "pyyaml>=6.0",
    "paramiko>=3.0,<4.0",
    "pyside6>=6.5",
]

[project.scripts]
jobdesk = "jobdesk_app.cli:main"
jobdesk-prep = "jobdesk_app.cli_prep:main"

[project.gui-scripts]
jobdesk-gui = "jobdesk_app.gui.app:main"

[project.optional-dependencies]
chem = [
    "rdkit>=2023.9",
    # ConfFlow workflow engine is vendored under
    # ``src/jobdesk_app/confflow/`` (archived upstream tag v1.1.0-archived,
    # commit 758c53926d97fe0dc0b66610cb2854cb218f3c6d). Both the Windows GUI
    # and the Linux compute node import the same Pydantic models
    # (``jobdesk_app.confflow.confflow.core.models``) for workflow validation.
    # The remote node must ``pip install confflow`` at the same pinned commit.
]
package = [
    "pyinstaller>=6.0",
]
dev = [
    "build>=1.2",
    "mypy>=1.10",
    # Vendored confflow's top-level __init__ transitively imports
    # numpy, so the CI runner needs a numpy wheel. Two constraints
    # conflict on a single version pin:
    #   1. numpy 1.x supports Python 3.9-3.12 only; on 3.13 it has
    #      no proper support.
    #   2. numpy 2.x ships a .pyi stub using Python 3.12+'s `type`
    #      statement, which the mypy process running on the 3.11/3.12
    #      matrix entries cannot parse.
    # Pin via environment marker so each matrix entry gets the right
    # numpy generation.
    "numpy>=1.24,<2; python_version<'3.13'",
    "numpy>=2.1,<2.4; python_version>='3.13'",
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "ruff>=0.4",
    "types-PyYAML>=6.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
jobdesk_app = ["gui/resources/*.svg", "resources/**/*.yaml", "confflow/confflow/**/*.toml", "confflow/confflow/**/*.yaml", "confflow/confflow/**/*.json", "confflow/confflow/**/*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
tmp_path_retention_policy = "none"
addopts = "-m 'not integration'"
markers = [
    "integration: opt-in tests that require real SSH/SFTP/ConfFlow endpoints or local WSL g16",
]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# run_repository/__init__.py defines a module-level constant
# (``_DELETE_CLEANUP_LEADER_GRACE_SECONDS``) before the sibling-module
# imports so that ``_runs`` can do ``from . import
# _DELETE_CLEANUP_LEADER_GRACE_SECONDS``. Refactoring that ordering is
# out of scope for lint cleanup; ignore ``E402`` here only.
"src/jobdesk_app/services/run_repository/__init__.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["jobdesk_app"]


[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false

# Type-check the bodies of untyped functions in the non-GUI layers.
[[tool.mypy.overrides]]
module = ["jobdesk_app.core.*", "jobdesk_app.remote.*", "jobdesk_app.services.*", "jobdesk_app.confflow.*"]
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "jobdesk_app.services.run_repository",
    "jobdesk_app.services.run_coordinator",
    "jobdesk_app.services.run_monitor",
    "jobdesk_app.gui.run_monitor_qt",
]
check_untyped_defs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "jobdesk_app.gui.worker_utils",
    "jobdesk_app.gui.pages.settings_servers_helpers",
    "jobdesk_app.gui.pages.file_transfer_helpers",
]
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "PySide6.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "paramiko.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "rdkit.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jobdesk_app.confflow.*"
ignore_missing_imports = true

# Vendored confflow ships a stale ``tests/`` tree with imports in the
# pre-vendored (``import confflow``) style that no longer resolves
# under jobdesk's monorepo layout. These files are *not* collected by
# pytest (``testpaths = ["tests"]`` excludes them), so mypy is the only
# CI step that sees them. Tell mypy to ignore everything for both
# subtrees rather than rewriting 30+ upstream-style imports or wiring
# extra ``# type: ignore`` markers into vendored code.
[[tool.mypy.overrides]]
module = "jobdesk_app.confflow.confflow.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "jobdesk_app.confflow.tests.*"
ignore_missing_imports = true
ignore_errors = true

# Parsers: re.search() -> Match|None pattern is safe but verbose to annotate.
[[tool.mypy.overrides]]
module = ["jobdesk_app.core.parsers.gaussian", "jobdesk_app.core.parsers.orca"]
disable_error_code = "assignment"

# comparison uses PySide6 enum attributes that stubs don't expose.
[[tool.mypy.overrides]]
module = "jobdesk_app.services.comparison"
disable_error_code = ["attr-defined", "operator", "type-var"]

# GUI modules use PySide6 enum attributes (e.g. Qt.AlignLeft, QHeaderView.Interactive)
# that type stubs expose under nested enum classes; suppress attr-defined only.
[[tool.mypy.overrides]]
module = "jobdesk_app.gui.*"
disable_error_code = "attr-defined"
