[project]
name = "jobdesk"
version = "0.5.0"
description = "Windows-first scientific-computing job desk for local inputs, remote execution, result download, and local analysis"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = [
    "pydantic>=2.0,<3.0",
    "pyyaml>=6.0",
    "paramiko>=3.0,<4.0",
    "pyside6>=6.5",
]

[project.scripts]
jobdesk = "jobdesk_app.cli:main"
jobdesk-prep = "jobdesk_app.cli_prep:main"

[project.gui-scripts]
jobdesk-gui = "jobdesk_app.gui.app:main"

[project.optional-dependencies]
chem = [
    "rdkit>=2023.9",
    "confflow>=1.4.0,<2.0",
]
package = [
    "pyinstaller>=6.0",
]
dev = [
    "build>=1.2",
    "mypy>=1.10",
    # ConfFlow's top-level __init__ transitively imports
    # numpy, so the CI runner needs a numpy wheel. Two constraints
    # conflict on a single version pin:
    #   1. numpy 1.x supports Python 3.9-3.12 only; on 3.13 it has
    #      no proper support.
    #   2. numpy 2.x ships a .pyi stub using Python 3.12+'s `type`
    #      statement, which the mypy process running on the 3.11/3.12
    #      matrix entries cannot parse.
    # Pin via environment marker so each matrix entry gets the right
    # numpy generation.
    "numpy>=1.24,<2; python_version<'3.13'",
    "numpy>=2.1,<2.4; python_version>='3.13'",
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "ruff>=0.4",
    "types-PyYAML>=6.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
jobdesk_app = ["gui/resources/*.svg", "resources/**/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
tmp_path_retention_policy = "none"
addopts = "-m 'not integration'"
markers = [
    "integration: opt-in tests that require real SSH/SFTP/ConfFlow endpoints or local WSL g16",
]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# run_repository/__init__.py defines a module-level constant
# (``_DELETE_CLEANUP_LEADER_GRACE_SECONDS``) before the sibling-module
# imports so that ``_runs`` can do ``from . import
# _DELETE_CLEANUP_LEADER_GRACE_SECONDS``. Refactoring that ordering is
# out of scope for lint cleanup; ignore ``E402`` here only.
"src/jobdesk_app/services/run_repository/__init__.py" = ["E402"]
# workflow_page.py is a deprecated backward-compatibility shim that uses
# delayed imports to avoid circular dependencies; E402 is expected here.
"src/jobdesk_app/gui/pages/workflow_page.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["jobdesk_app"]


# mypy configuration moved to mypy.ini for better organization
